2005-06-09  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/util.rb (Util::redirect): use 'Location' header instead of
	'meta refresh'.

	* hiki/command.rb (Command::initialize): automatically login as
	'admin' if admin password is empty.

2005-06-08  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/config.rb (Config::default): add an entry of 'login' in
	@template.
	* hiki/command.rb (Command::cmd_theme,
	Command::admin_enter_password): remove needless methods.

	* misc/plugin/edit_user.rb: add a new plugin.
	* hiki/command.rb (cmd_login): support @conf['user.list'] that is
	made by 'edit_user.rb' plugin.

	* misc/plugin/rss.rb: use export_plugin_methods. support hiding
	RSS menu.

	* hiki/storage.rb (load_cache): only use cache files with same
	HIKI_RELEASE_DATE.

	* style/default/parser.rb: support multiple line plugins.
	* style/default/html_formatter.rb (call_plugin_method): use
	apply_plugin method in pluginutil.rb.
	* hiki/util.rb (csv_split): remove a needless method.

2005-06-07  Kazuhiko  <kazuhiko@fdiary.net>
	* messages/en.rb, messages/fr.rb, messages/it.rb,
	messages/ja.rb (msg_password_title): remove a needless message.
	(msg_login): add a new message.

	* misc/plugin/auth_typekey.rb: save 'auth_name' in a session file
	instead of browser's cookie.

	* hiki/command.rb (Command::cmd_view): redirect to FrontPage if a
	page name is invalid.
	(Command::template, Command::themes): remove needless methods.

2005-06-06  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/page.rb (Page::process): rename from 'Page#page'.
	(Page::out): add a new method.

	* hiki/command.rb (Command::initialize): not put @plugin to @db.
	(dispatch): redirect to FrontPage if a command is invalid.
	(Command::themes): remove a needless method.

	* hiki/storage.rb (HikiDBBase::save): move to 'Plugin#save'.
	* misc/plugin/bbs.rb, misc/plugin/comment.rb,
	misc/plugin/trackback.rb: use 'Plugin#save' instead of 'DB#save'.

	* hiki/plugin.rb (Plugin::load_file): rename from 'Plugin#load'.